solve database issue

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://jwang259%40admin:jHAKP4Nvt97ryQFI@grocerygeniecluster.zucwq.mongodb.net/grocery_genie?retryWrites=true&w=majority&authSource=admin
+MONGO_URI=mongodb+srv://jwang259:kHyGJCSdNQnkwtP3@grocerygeniecluster.zucwq.mongodb.net/grocery_genie
+SECRET_KEY = supersecretkey
