--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://jwang259:kHyGJCSdNQnkwtP3@grocerygeniecluster.zucwq.mongodb.net/grocery_genie?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://jwang259:kHyGJCSdNQnkwtP3@grocerygeniecluster.zucwq.mongodb.net/grocery_genie?retryWrites=true&w=majority&ssl=true&ssl_cert_reqs=CERT_REQUIRED
 SECRET_KEY = supersecretkey
