--- a/.github/workflows/azure-flask-deploy.yml
+++ b/.github/workflows/azure-flask-deploy.yml
@@ -22,6 +22,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirement.txt
 
+    - name: ✅ Run backend unit tests
+      run: 
+        python -m unittest discover backend/src/tests
+
+
     - name: 🚀 Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
